<resources>
    <string name="app_name">Social App</string>
    <string name="tx_sign_in">Sign In</string>
    <string name="tx_email_address">Email Address</string>
    <string name="hint_email_address">Enter email address</string>
    <string name="tx_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_increment">Increment</string>
    <string name="btn_decrement">Decrement</string>
</resources>