<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/screen_background"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_margin="20dp"
       android:padding="10dp"
       android:background="@drawable/bg_login_box">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/tx_sign_in"
          android:padding="10dp"
          android:textSize="20dp"
          android:textColor="@color/purple_500"
          android:textStyle="italic|bold"
          android:gravity="center"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/tx_email_address"
          android:paddingVertical="5dp"
          android:textColor="@color/black"/>

      <EditText
          android:id="@+id/edEmailAddress"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:paddingLeft="3dp"
          android:inputType="textEmailAddress"
          android:hint="@string/hint_email_address"
          android:background="@drawable/bg_input_box"
          android:textColorHint="@color/hint_color"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/tx_password"
          android:layout_marginTop="15dp"
          android:paddingVertical="5dp"
          android:textColor="@color/black"/>

      <EditText
          android:id="@+id/edPassword"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:paddingLeft="3dp"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:background="@drawable/bg_input_box"
          android:textColorHint="@color/hint_color"/>

      <Button
          android:id="@+id/btnSignIn"
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/bg_button"
          android:textColor="@color/white"
          android:text="@string/btn_sign_in"
          android:layout_marginBottom="10dp"/>
   </LinearLayout>

</LinearLayout>